[package]
name = "site-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globset = "0.4.14"
# kdl = "4.6.0"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
] }
tokio = { version = "1.35.1", features = ["full"] }
# url = "2.5.0"
urlpattern = "0.2.0"
