[package]
name = "site-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argp = "0.3.0"
globset = "0.4.14"
humantime = "2.1.0"
# kdl = "4.6.0"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
prodash = "28.0.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
] }
rusqlite = { version = "0.30.0", features = [
    "bundled",
    "functions",
    "blob",
    "trace",
    "serde_json",
    "url",
    "hooks",
    "uuid",
    "extra_check",
    "rusqlite-macros",
] }
tokio = { version = "1.35.1", features = ["full"] }
# url = "2.5.0"
urlpattern = "0.2.0"
